--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next next-on-pages",
+    "build": "pnpm next-on-pages",
     "start": "next start"
   },
   "dependencies": {
